cluster/devcontainer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyter
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect : "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect : "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: jupyter.xlscsde.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: proxy-public
            port: 
              name: http
  tls:
  - hosts:
    - jupyter.xlscsde.local
    secretName: example-tls-secret
